# atomotch

./: .gitignore  README.md
device/: README.md  platformio.ini
device/src/: main.cpp  robot_voice_effects.h
device/tools/: log_relay_server.py  upload_loop.sh
infra/: .dockerignore  CLAUDE.md  Dockerfile  README.md  README_ja.md  docker-compose.yml  pyproject.toml  run_gradio.py  run_server.py  stt_server.py
infra/miotts_server/: __init__.py  api.py  asr.py  audio.py  best_of_n.py  codec.py  config.py  gradio_app.py  llm_client.py  schemas.py  text.py  token_parser.py
infra/presets/: en_female.pt  en_male.pt  jp_female.pt  jp_male.pt
infra/scripts/: generate_preset.py
miotts_server/: gradio_app.py
