[project]
name = "miotts-inference"
version = "1.0.0"
description = "Inference server for MioTTS using FastAPI and OpenAI-compatible LLM backends"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.111.0",
    "gradio>=4.0.0",
    "httpx>=0.27.0",
    "g2p_en",
    "miocodec @ git+https://github.com/Aratako/MioCodec@main",
    "nltk",
    "pyopenjtalk",
    "python-multipart>=0.0.9",
    "soundfile",
    "transformers<5",
    "uvicorn>=0.30.0",
    "ninja>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["miotts_server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
